[package]
name = "bestchange_api"
license = "MIT"
version = "0.0.1"
edition = "2021"
description = "Library for convenient use of the bestchange api."
keywords = ["api", "bestchange"]
authors = ["Gadzhi07"]
readme = "README.md"

[lib]
name = "bestchange_api"
path = "src/lib.rs"

[[bin]]
name = "test-bestchange_api"
path = "src/bin.rs"

[dependencies]
zip = "0.6.2"
reqwest = {version = "0.11.11", features = ["blocking"]}
encoding_rs = "0.8.31"
